BE#13 Improve Login and register
